crates/gossamer-diagnostics/tests/snapshots/GT0077.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
assertion_line: 86
expression: rendered
---
--- plain ---
error[GT0077]: `sync::Shared` guards one word, and only a scalar or a `String` is - here
--- framed ---
error[GT0077]: `sync::Shared` guards one word, and only a scalar or a `String` is
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
