crates/gossamer-diagnostics/tests/snapshots/GT0078.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
assertion_line: 86
expression: rendered
---
--- plain ---
error[GT0078]: An assignment targets an expression that names no place. Only a - here
--- framed ---
error[GT0078]: An assignment targets an expression that names no place. Only a
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
