crates/gossamer-diagnostics/tests/snapshots/GT0079.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0079]: A `Box<T>` / `Rc<T>` / `Arc<T>` wrapper was written. Every value is - here
--- framed ---
error[GT0079]: A `Box<T>` / `Rc<T>` / `Arc<T>` wrapper was written. Every value is
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
