crates/gossamer-diagnostics/tests/snapshots/GT0080.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0080]: `String::parse` was called. The parse surface is `to_i64`, - here
--- framed ---
error[GT0080]: `String::parse` was called. The parse surface is `to_i64`,
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
