crates/gossamer-diagnostics/tests/snapshots/GT0081.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0081]: An `enum Name : uN` named a width too narrow for its variants. A - here
--- framed ---
error[GT0081]: An `enum Name : uN` named a width too narrow for its variants. A
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
