crates/gossamer-diagnostics/tests/snapshots/GT0086.snap
---
source: crates/gossamer-diagnostics/tests/snapshots.rs
expression: rendered
---
--- plain ---
error[GT0086]: A `spawn` was written in a function with no `cohort { }` of its own. - here
--- framed ---
error[GT0086]: A `spawn` was written in a function with no `cohort { }` of its own.
  --> snap.gos:2:5
     2 |     let x = 1
       |     ^^^^^
     error: here
